--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="stockName">Vanguard FTSE 250 ETF</string>
+    <string name="title_activity_stock_purchase">StockPurchaseActivity</string>
 </resources>
