+ Added new 'Dashboard' page to house glanceable portfolio information.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,7 @@
     <string name="title_activity_net_worth">NetWorthActivity</string>
     <string name="netWorth">Net Worth</string>
     <string name="money_format">£%,.2f</string>
+    <string name="netWorth_header">ca$h mon€y</string>
+    <string name="dashboard_header">GAIN$</string>
+    <string name="dashboard">Dashboard</string>
 </resources>
