+ Added widget to display my investment change

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,6 @@
     <string name="netWorth_header">ca$h mon€y</string>
     <string name="dashboard_header">GAIN$</string>
     <string name="dashboard">Dashboard</string>
+    <string name="appwidget_text">↑ %.2f%%</string>
+    <string name="add_widget">Add widget</string>
 </resources>
