+ Add date picker to 'Add purchase' form to allow user to choose their investment date.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,6 @@
     <string name="dashboard_header">GAIN$</string>
     <string name="dashboard">Dashboard</string>
     <string name="appwidget_text">↑ %.2f%%</string>
+    <string name="ok">ok</string>
+    <string name="cancel">Cancel</string>
 </resources>
