+ Added the days since last investment to prompt regular pound cost averaged investing.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="money_format">£%,.2f</string>
     <string name="percentage_format">%.2f%%</string>
     <string name="percentage_fi">%,.4f%% fi</string>
+    <string name="days_format">%d days</string>
     <string name="dashboard_header">GAIN$</string>
     <string name="dashboard">Dashboard</string>
     <string name="appwidget_text">↑ %.2f%%</string>
