+ Allow the stock price to be input to 3 decimal places. + Display the  stock price to 3 decimal places.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="title_activity_net_worth">NetWorthActivity</string>
     <string name="netWorth">Net Worth</string>
     <string name="money_format">£%,.2f</string>
+    <string name="decimal_format">£%,.3f</string>
     <string name="percentage_format">%.2f%%</string>
     <string name="percentage_fi">%,.4f%% fi</string>
     <string name="days_format">%d days</string>
