+ Added new page to hold stocks that i'm currently tracking (I want to build towards a page that will tell me whens a good time to buy & which fund out of a small shortlist).

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,6 @@
     <string name="appwidget_text">↑ %.2f%%</string>
     <string name="ok">ok</string>
     <string name="cancel">Cancel</string>
+    <string name="funds">Funds</string>
+    <string name="fund_header">Watchlist</string>
 </resources>
