+ Added (currently empty) page to house the manipulation of currently harcoded values such as FI number & finds to watch.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="cancel">Cancel</string>
     <string name="funds">Funds</string>
     <string name="fund_header">Watchlist</string>
+    <string name="control_panel">Control Panel</string>
 </resources>
