+ Persist all of the assumptions/figures that  are currently hardcoded to my personal scenario. Display them (currently read-only) in the new control panel page.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,8 @@
     <string name="funds">Funds</string>
     <string name="fund_header">Watchlist</string>
     <string name="control_panel">Control Panel</string>
+    <string name="yearly_expenses">Yearly Expenses</string>
+    <string name="safe_withdrawal_rate">Safe Withdrawal Rate</string>
+    <string name="funds_watchlist">Funds Watchlist</string>
+    <string name="stock_exchange_prefix">Stock Exchange Prefix</string>
 </resources>
