Stopped showing the success toast message as the user can see the dividend added to the list below the input form. Added labels to the dividend list items.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,6 @@
     <string name="financialIndependenceNumber">Financial Independence Number</string>
     <string name="title_activity_dividend">Dividend</string>
     <string name="amount">Amount</string>
+    <string name="amount_label">Amount</string>
+    <string name="date_label">Date</string>
 </resources>
