+ Dashboard now supports the two shares in my portfolio. Replacing '//'  which for reasons unknown is added to the JSON response body. Toast will display for any stocks purchased that the stock dictionary hasn't looked up.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,5 @@
     <string name="percentage_growth">Percentage growth</string>
     <string name="percentage_dividend_yield">Percentage dividend yield</string>
     <string name="percentage_fi">Percentage FI</string>
+    <string name="cantFindStock_format">Unable to find \'%s\' current price</string>
 </resources>
